--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "homepage": "https://github.com/waqasghaloo/node-practice#readme",
   "dependencies": {
     "express": "^4.18.1",
+    "helmet": "^5.1.0",
     "joi": "^17.6.0",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.16"
   }
 }
