--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/waqasghaloo/node-practice#readme",
   "dependencies": {
+    "config": "^3.3.7",
     "express": "^4.18.1",
     "helmet": "^5.1.0",
     "joi": "^17.6.0",
